stage03/cert-manager/manifests/hubble/reference-grant.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: allow-observability-hubble-ui
  namespace: kube-system
spec:
  from:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      namespace: observability
  to:
    - group: ""
      kind: Service
      name: hubble-ui
